# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\Auth\AdminAuthController;
+use App\Http\Controllers\Api\Auth\StudentAuthController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/test', fn () => response()->json(['message' => 'Hello World!']));
@@ -8,4 +9,9 @@ Route::get('/test', fn () => response()->json(['message' => 'Hello World!']));
 Route::prefix('admin/auth')->group(function () {
     Route::post('/', [AdminAuthController::class, 'login']);
     Route::post('/logout', [AdminAuthController::class, 'logout'])->middleware('auth:web');
+});
+
+Route::prefix('student/auth')->group(function () {
+    Route::post('/', [StudentAuthController::class, 'login']);
+    Route::post('/logout', [StudentAuthController::class, 'logout'])->middleware('auth:student');
 });
